se arregla errores al hacer comit